RESOLVED FIXED196721
LICM incorrectly assumes it'll never insert a node which provably OSR exits
https://bugs.webkit.org/show_bug.cgi?id=196721
Summary LICM incorrectly assumes it'll never insert a node which provably OSR exits
Saam Barati
Reported 2019-04-08 19:20:32 PDT
We might insert code that provably exits. We should gracefully handle this in LICM instead of asserting it doesn't happen.
Attachments
patch (5.51 KB, patch)
2019-04-08 19:58 PDT, Saam Barati
no flags
patch (5.51 KB, patch)
2019-04-08 19:59 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2019-04-08 19:56:30 PDT
Saam Barati
Comment 2 2019-04-08 19:58:17 PDT
Saam Barati
Comment 3 2019-04-08 19:59:18 PDT
WebKit Commit Bot
Comment 4 2019-04-23 19:14:28 PDT
Comment on attachment 367021 [details] patch Clearing flags on attachment: 367021 Committed r244579: <https://trac.webkit.org/changeset/244579>
WebKit Commit Bot
Comment 5 2019-04-23 19:14:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.